fix layout; add align-items property to body for improved alignment

--- a/style.css
+++ b/style.css
@@ -172,6 +172,7 @@ body
     max-width:700px;
     gap:500px;
     min-height:auto;
+    align-items: right;
 }
 .branch
 {
